--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,11 @@ body {
     height: 150px;
     background-color: deepskyblue;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 30px;
+    margin: 100px auto;
 }
 
 .main-block-message {
