--- a/styles/style.css
+++ b/styles/style.css
@@ -5,13 +5,15 @@ body {
 .main-block {
     width: 300px;
     height: 150px;
-    background-color: deepskyblue;
+    background-color: green;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 30px;
+    color: white;
 }
 
 .main-block-message {
     font-size: 23px;
+    color: white;
 }
